Launch4J maven plugin works